# frame-os

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
csrc/: fhello_main.c  hello.c  tcc_assert.c  tcc_hi.c  tcchello.c
docker/: Dockerfile  README.md  ensure-framec.sh  run.sh
docs/: INSTALL.md  architecture.md  capstone.md  frame_assessment.md  overview.md  port_contract.md  portability.md  roadmap.md  syscall_abi.md  testing.md  vision.md
docs/plans/: b1.md  b2.md  b3.md  b4.md  b5.md  b5_tcp.md  b_hal.md  hb_parity.md  multiflight_io.md  pipeline_conversions.md  s6_io_scheduler_handoff.md
docs/systems/: README.md  _template.md  arp_resolver.dot  arp_resolver.md  block_request.dot  block_request.md  builddriver.dot  builddriver.md  elf_loader.dot  elf_loader.md  event_counter.dot  event_counter.md  hello.dot  hello.md  hub_port.dot  hub_port.md  io_scheduler.dot  io_scheduler.md  ip_reassembly.dot  ip_reassembly.md  job.dot  job.md  job_control.dot  job_control.md  kernel.dot  kernel.md  mount.dot  mount.md  open_file.dot  open_file.md  page_fault_handler.dot  page_fault_handler.md  parser.dot  parser.md  pipe.dot  pipe.md  pipeline.dot  pipeline.md  process.dot  process.md  (+24 more)
frame/: arp_resolver.frs  block_request.frs  builddriver.frs  elf_loader.frs  event_counter.frs  hello.frs  hub_port.frs  io_scheduler.frs  ip_reassembly.frs  ish_jobs.frs  job.frs  job_control.frs  kernel.frs  mount.frs  open_file.frs  page_fault_handler.frs  parser.frs  pipe.frs  pipeline.frs  process.frs  process_table.frs  rx_pipeline.frs  scheduler.frs  serial_driver.frs  shell.frs  syscall_dispatcher.frs  task.frs  tcp_connection.frs  udp_socket.frs  usb_enumeration.frs  usb_msd.frs  usb_transfer.frs
kernel/: Cargo.toml  build.rs  linker-aarch64.ld  linker.ld
kernel-tests/: Cargo.toml  build.rs
kernel-tests/src/: lib.rs
kernel-tests/tests/: arp_resolver_behavior.rs  block_request_behavior.rs  elf_loader_behavior.rs  event_counter_behavior.rs  hub_port_behavior.rs  io_scheduler_behavior.rs  ip_reassembly_behavior.rs  kernel_behavior.rs  mount_behavior.rs  open_file_behavior.rs  page_fault_handler_behavior.rs  process_behavior.rs  process_table_behavior.rs  rx_pipeline_behavior.rs  scheduler_behavior.rs  serial_driver_behavior.rs  state_graphs.rs  syscall_dispatcher_behavior.rs  task_behavior.rs  tcp_connection_behavior.rs  udp_socket_behavior.rs  usb_enumeration_behavior.rs  usb_msd_behavior.rs  usb_transfer_behavior.rs
kernel-tests/tests/snapshots/: state_graphs__arp_resolver_state_graph.snap  state_graphs__block_request_state_graph.snap  state_graphs__elf_loader_state_graph.snap  state_graphs__event_counter_state_graph.snap  state_graphs__hub_port_state_graph.snap  state_graphs__io_scheduler_state_graph.snap  state_graphs__ip_reassembly_state_graph.snap  state_graphs__kernel_state_graph.snap  state_graphs__mount_state_graph.snap  state_graphs__open_file_state_graph.snap  state_graphs__page_fault_handler_state_graph.snap  state_graphs__process_state_graph.snap  state_graphs__process_table_state_graph.snap  state_graphs__rx_pipeline_state_graph.snap  state_graphs__scheduler_state_graph.snap  state_graphs__serial_driver_state_graph.snap  state_graphs__syscall_dispatcher_state_graph.snap  state_graphs__task_state_graph.snap  state_graphs__tcp_connection_state_graph.snap  state_graphs__udp_socket_state_graph.snap  state_graphs__usb_enumeration_state_graph.snap  state_graphs__usb_msd_state_graph.snap  state_graphs__usb_transfer_state_graph.snap
kernel/src/: allocator.rs  arch.rs  console.rs  context.rs  crosscore.rs  elf.rs  fpu.rs  frame_systems.rs  frames.rs  fs.rs  gdt.rs  hal.rs  interrupts.rs  io.rs  ip_reasm.rs  ksched.rs  lapic.rs  lib.rs  lockorder.rs  main.rs  net.rs  paging.rs  pci.rs  pcsched.rs  percpu.rs  pic.rs  pipe.rs  pit.rs  ramdisk.rs  reactor.rs  rtc.rs  sched.rs  sched_demo.rs  serial.rs  spin.rs  tcp.rs  usermode.rs  vfs.rs  virtio_blk.rs  virtio_net.rs  (+2 more)
kernel/src/arch/: aarch64.rs  x86_64.rs
kernel/src/arch/aarch64/: boot.rs  context.rs  fdt.rs  gic.rs  mmu.rs  percpu.rs  sched_preempt.rs  serial.rs  timer.rs  usermode.rs  vectors.rs  virtio_mmio.rs
kernel/src/arch/x86_64/: context.rs  cpu.rs  fpu.rs  paging.rs  percpu.rs  rtc.rs  serial.rs
libc/: Cargo.toml  build.rs
libc/.cargo/: config.toml
libc/cshim/: cshim.c
libc/csrc/: crt1.s  crti.s  crtn.s  strtold.c
libc/frame/: printf_scan.frs
libc/include/: assert.h  errno.h  fcntl.h  inttypes.h  math.h  setjmp.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
libc/include/sys/: mman.h  time.h
libc/src/: cfloat.rs  cstdlib.rs  cstring.rs  frame_systems.rs  lib.rs  malloc.rs  posix.rs  printf.rs  setjmp.rs  stdio.rs
scripts/: extract_fsfile.py
shared/: Cargo.toml
shared/src/: fs.rs  lib.rs
shell/: Cargo.toml  build.rs
shell/src/: builtin.rs  exec.rs  frame_systems.rs  job_summary.rs  lib.rs  main.rs  process_backend.rs  shell_env.rs  signals.rs
shell/tests/: builtins_e2e.rs  e2e.rs  external_e2e.rs  job_behavior.rs  job_control_behavior.rs  jobs_e2e.rs  parser_behavior.rs  pipeline_behavior.rs  pipeline_e2e.rs  shell_behavior.rs  state_graphs.rs
shell/tests/snapshots/: state_graphs__job_control_state_graph.snap  state_graphs__job_state_graph.snap  state_graphs__parser_state_graph.snap  state_graphs__pipeline_state_graph.snap  state_graphs__shell_state_graph.snap
user/: Cargo.toml  build.rs  linker.ld
user-aarch64-hello/: Cargo.toml  linker-aarch64.ld
user-aarch64-hello/.cargo/: config.toml
user-aarch64-hello/src/: main.rs
user/.cargo/: config.toml
user/src/: argtest.rs  brktest.rs  build_frame.rs  buildc.rs  busyloop.rs  cmain.rs  coexec.rs  cp.rs  date.rs  echo.rs  faulter.rs  fhello.rs  forker.rs  fputest.rs  frame_systems.rs  frameshell.rs  fwtest.rs  grep.rs  head.rs  hello_frame.rs  ish.rs  ls.rs  main.rs  mem.rs  mkdir.rs  mv.rs  ps.rs  rm.rs  rmdir.rs  shell.rs  sigtest.rs  spawner.rs  spin.rs  tail.rs  touch.rs  waiter.rs  wc.rs
xtask/: Cargo.toml
(+1 files in other folders)
