[workspace]
resolver = "2"
members = [
    "shell",
    "kernel",
    "kernel-tests",
    "shared",
    "xtask",
]
# The freestanding user program is its own bare-metal package with a custom
# linker script; the kernel's build.rs compiles it and bakes the ELF in. It is
# excluded so workspace-wide commands don't try to build it for the host target.
exclude = [
    "user",
    # frame-os-libc (B10): a bare-metal userspace runtime, built only as a path
    # dependency of `user` (for `x86_64-unknown-none`). Excluded so workspace-wide
    # host commands don't try to build it for the host target.
    "libc",
]

# `default-members` excludes the kernel from `cargo build` / `cargo test` at the
# workspace root, because the kernel requires a bare-metal target
# (`x86_64-unknown-none`) and would fail to build with the workspace's default
# host target. Build the kernel explicitly: `cargo xtask qemu` or
# `cargo build -p kernel --target x86_64-unknown-none`.
default-members = [
    "shell",
    "kernel-tests",
    "shared",
    "xtask",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Frame OS Contributors"]
repository = "https://github.com/<TBD>/frame-os"
rust-version = "1.75"

[workspace.dependencies]
# Hosted-shell dependencies
rustyline = "14"
ctrlc = "3"
libc = "0.2"
signal-hook = "0.3"

# Testing
insta = "1.40"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# Used by xtask
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Faster incremental builds for the development loop
opt-level = 0
debug = true
