[package]
name = "frame-os-kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Frame OS — bare-metal kernel"

[[bin]]
name = "frame-os-kernel"
path = "src/main.rs"

[features]
# `interactive` (B8): replace the boot's fatal-fault demo tail with an
# interactive shell (`ish`) reading live serial-console input. Off by default —
# the smoke suite builds the default kernel, this feature builds the typeable one.
interactive = []

# This crate is excluded from the workspace's `default-members` because it
# needs a bare-metal target (`x86_64-unknown-none`) and won't build on the
# host. Build via xtask:
#   cargo xtask qemu        — boot in QEMU
#   cargo xtask qemu-test   — run smoke tests (B0 Step 4+)
# Or explicitly:
#   cargo build -p frame-os-kernel --target x86_64-unknown-none

[dependencies]
# Limine boot-protocol bindings. We use the `limine` crate to declare the
# protocol headers + entry-point requests that the Limine bootloader
# discovers when scanning the kernel ELF.
#
# (The x86_64-unknown-none target spec already sets panic-strategy = abort
# by default — we don't need to override it in this crate's profile.)
limine = "0.5"

# Global heap allocator for the kernel. The Frame-generated `Kernel` code
# allocates (String/Vec/Rc for event + compartment plumbing), so we need a
# `#[global_allocator]` live before `Kernel::__create()`. `linked_list_allocator`
# manages a fixed static buffer at B0; B1's memory manager will hand it a
# real mapped region instead. See src/allocator.rs.
linked_list_allocator = "0.10"

# Shared on-disk FS format (B4) — the byte layout, used by both the kernel
# driver and the host `mkfs` tool so it's defined exactly once. no_std.
frame-os-shared = { path = "../shared" }

[build-dependencies]
# build.rs invokes framec on frame/kernel.frs and uses anyhow for error
# context, mirroring the shell crate's build script.
anyhow = { workspace = true }
