# frame-os-libc (B10): a minimal C/POSIX-ish runtime for Frame OS user programs.
#
# Built on the Frame OS syscall ABI (B8/B9). This is the "C side" a future
# tcc-compiled program links against; for now Rust user programs link it via the
# same `extern "C"` surface, exercising exactly the path C will take. Built for
# the bare-metal `x86_64-unknown-none` target as a path dependency of the `user`
# crate (which supplies the target + linker script), so it is excluded from the
# host workspace. In B11 a `staticlib` crate-type is added to emit a `.a` for tcc.
[package]
name = "frame-os-libc"
version = "0.1.0"
edition = "2021"

[lib]
name = "frame_os_libc"
path = "src/lib.rs"
# rlib: linked by the Rust user programs (e.g. cmain) as a dependency.
# staticlib: a `.a` of the extern "C" surface + crt0, for linking C programs
# compiled by gcc/tcc against frame-libc (B11). Built standalone from libc/.
crate-type = ["rlib", "staticlib"]

# The `crt0` feature (default on) provides the program entry `_start` (the asm
# shim that hands the SysV stack to `__libc_start`). The Rust user programs and
# the gcc-built C programs (chello) link the libc *as their whole runtime*, so
# they need `_start` from it. But when tcc links a program the standard way
# (`crt1.o crti.o … crtn.o -lc`), `_start` comes from `crt1.o` instead — and
# `crt1.o` pulls `__libc_start` from this `.a`, whose object would *also* carry
# `_start` (same translation unit), a duplicate-symbol clash. So the tcc sysroot
# `libc.a` is built `--no-default-features` to omit `_start`; `crt1.o` owns it.
[features]
default = ["crt0"]
crt0 = []

[dependencies]
# Free-list bookkeeping behind malloc/free. The C ABI (free takes no size) is
# handled by a size-tracking header we add in src/malloc.rs; this crate just
# does the underlying first-fit allocation over the brk-grown region. Same
# allocator the kernel and user crates already use.
linked_list_allocator = "0.10"
