[package]
name = "frame-os-shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Frame OS — hosted-mode shell"

[[bin]]
name = "frame-os-shell"
path = "src/main.rs"

[dependencies]
# Line editing + Ctrl-C / Ctrl-D handling at the prompt.
rustyline = { workspace = true }

# Used by Shell.$RunningExternal at H2 to install a SIG_IGN handler so the
# shell survives Ctrl-C while a child process is running (the child still
# receives the signal via the terminal foreground process group and dies
# naturally). Unix-only; the corresponding Windows path is future polish.
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
