[package]
name = "frame-os-shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Frame OS — hosted-mode shell"

[[bin]]
name = "frame-os-shell"
path = "src/main.rs"

[dependencies]
# Line editing + Ctrl-C / Ctrl-D handling at the prompt.
rustyline = { workspace = true }

# Unix-only signal-handling deps:
#  - libc: SIG_IGN install during foreground child.wait (carried from H2),
#    plus libc::kill for Job's signal delivery (SIGTSTP/SIGCONT/SIGKILL).
#  - signal-hook: SIGTSTP handler installed at startup so Ctrl-Z stops the
#    foreground job without taking the shell down with it (H3 Step 3).
# Windows paths are deferred — H3 features that depend on SIGTSTP/SIGCONT
# cleanly omit via #[cfg(unix)] gates.
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
signal-hook = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
