# Freestanding user program for Frame OS (B3 Step 4).
#
# This crate is deliberately OUTSIDE the workspace (see the root Cargo.toml
# `exclude`): it builds for the bare-metal `x86_64-unknown-none` target with a
# custom linker script, and the kernel's build.rs compiles it into a static
# ELF that gets baked into the kernel image via `include_bytes!`.
#
# No std, no alloc, no libc/crt0 — it makes raw `syscall`s (the Frame OS ABI:
# rax = number, rdi/rsi = args) and `exit`s. The first real user program; the
# `ElfLoader` HSM parses + maps it.
[package]
name = "frame-os-user-hello"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello"
path = "src/main.rs"

# A second program that faults by reading kernel memory (B3 Step 4b isolation).
[[bin]]
name = "faulter"
path = "src/faulter.rs"

# Forks into two concurrent processes (B3 Step 5b).
[[bin]]
name = "forker"
path = "src/forker.rs"

# fork + exec: the child execs `hello` (B3 Step 5c).
[[bin]]
name = "spawner"
path = "src/spawner.rs"

# fork + wait: the parent reaps the child (B3 Step 5d).
[[bin]]
name = "waiter"
path = "src/waiter.rs"

# Concurrent exec regression test: forks two children that exec different
# programs from disk at once, stressing the per-exec scratch buffers (the fix
# for the shared ELF_BUF/ARGV_BUF race).
[[bin]]
name = "coexec"
path = "src/coexec.rs"

# Growable heap: grows its heap by 1 MiB via the brk syscall, then writes and
# verifies a pattern across it (B9-1). Allocator-free — calls brk directly.
[[bin]]
name = "brktest"
path = "src/brktest.rs"

# Echoes its argv (B9-2): an asm `_start` shim hands the entry rsp to Rust, which
# walks the SysV stack the kernel built. Disk-only (the shell loads /bin/argtest).
[[bin]]
name = "argtest"
path = "src/argtest.rs"

[[bin]]
name = "ls"
path = "src/ls.rs"

# S3 coreutils: file-op programs over the existing syscalls.
[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "rm"
path = "src/rm.rs"

[[bin]]
name = "touch"
path = "src/touch.rs"

[[bin]]
name = "cp"
path = "src/cp.rs"

# S4 text utilities.
[[bin]]
name = "wc"
path = "src/wc.rs"

[[bin]]
name = "head"
path = "src/head.rs"

[[bin]]
name = "tail"
path = "src/tail.rs"

[[bin]]
name = "grep"
path = "src/grep.rs"

[[bin]]
name = "date"
path = "src/date.rs"

# File write path (B9-3): creates /tmp.txt and exercises write, lseek, fstat,
# dup, and read-back. Baked into the kernel; run by usermode::run.
[[bin]]
name = "fwtest"
path = "src/fwtest.rs"

# FPU/SSE state preservation across context switches (B11-3a): forks two
# processes that each pin distinct sentinels into xmm0..xmm7 and verify they
# survive preemption. Baked into the kernel; run by usermode::run.
[[bin]]
name = "fputest"
path = "src/fputest.rs"

# C-style program over frame-libc (B10-1): no `_start` of its own — crt0 comes
# from frame-os-libc — just `main(argc, argv, envp)`. Disk-only (the shell runs
# /bin/cmain), exercising the exact entry path a tcc-compiled C program will use.
[[bin]]
name = "cmain"
path = "src/cmain.rs"

# Scripted shell: cat /motd + exec /bin/hello from disk (B4 Step 4a).
[[bin]]
name = "shell"
path = "src/shell.rs"

# Frame-driven shell: tokenizes command lines with the *same* `parser.frs`
# the hosted shell uses, in ring 3 (B4 Step 4b). The "one source, two targets"
# demonstration. Needs the heap (the only bin that does), hence the dependency.
[[bin]]
name = "frameshell"
path = "src/frameshell.rs"

# Interactive shell: a real REPL reading live input via read_line (B8), with
# fork+exec+wait so it survives running programs. Reuses the Parser FSM + heap.
[[bin]]
name = "ish"
path = "src/ish.rs"

# Build driver (B11-3e): drives the on-device C toolchain (compile→link→run)
# through the BuildDriver Frame FSM (frame/builddriver.frs). Forks /bin/tcc to
# compile + link /hello.c → /out.elf, then runs it. Disk-only (the shell runs
# /bin/buildc); needs the heap (the Frame system allocates), hence mod mem.
# (Named `buildc`, not `build` — cargo reserves the bin name `build`.)
[[bin]]
name = "buildc"
path = "src/buildc.rs"

# fhello (V1.0 capstone, Rust half): drives the Hello Frame system generated
# from frame/hello.frs by `framec -l rust`. Links frame-libc (crt0 + heap for
# the FSM's alloc). The same hello.frs is transpiled to C and built on-device by
# tcc (/fhello.c) — one Frame source, both backends. Disk-only (/bin/fhello).
[[bin]]
name = "fhello"
path = "src/fhello.rs"

# Heap allocator for the Frame-generated code (Vec/String/Rc/BTreeMap).
# Only `frameshell` pulls it in (via `mod mem`); the other bins stay
# allocator-free. Same crate + version the kernel uses.
[dependencies]
linked_list_allocator = "0.10"
# frame-os-libc (B10): the C/POSIX-ish runtime. Only `cmain` links it (for its
# crt0 + libc calls); the other bins define their own `_start` and don't
# reference it, so its symbols aren't pulled into them.
frame-os-libc = { path = "../libc" }

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
strip = true
